# ppl2025-gosuzuki-experiments

./: CMakeLists.txt  LICENSE  README.md  result.ods  sdkconfig
components/lpsram_protection/: CMakeLists.txt  buffering.c  panic_handler.c  panic_vectors.S  show_protection_info.c  srv_tbl.yml  tee_project.cmake
components/lpsram_protection/include/: show_protection_info.h
main/: CMakeLists.txt  esp32-protection.c  tree_t.h  xorshift32.c
main/include/: xorshift32.h
main/ulp/: main.c
